# eicr-anonymization

./: .gitignore  README.md  TODOs  actual.xml  eICR_3.1.xml.anonymized.xml  pyproject.toml  schema_structure.yaml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-template.md  qa-ticket-template.md  release-template.md  spike-template.md  task-template.md  user-story-template.md
config_examples/: README.md  default.yaml  patient_only.yaml
src/CDA/data_types/: string_validators.py
src/CDA/logical_models/: AD.py  ADXP.py  ANY.py  Act.py  AlternateIdentification.py  AssignedAuthor.py  AssignedCustodian.py  AssignedEntity.py  Authenticator.py  Author.py  AuthoringDevice.py  Authorization.py  BL.py  Birthplace.py  CD.py  CE.py  CR.py  CS.py  CV.py  ClinicalDocument.py  Component.py  ComponentOf.py  Consent.py  Criterion.py  Custodian.py  CustodianOrganization.py  DataEnterer.py  Device.py  DocumentationOf.py  ED.py  EIVL_TS.py  EN.py  ENXP.py  EncompassingEncounter.py  (+82 more)
src/eicr_anonymization/: __main__.py  anonimizer.py  anonymize_eicr.py  anonymizer.py  cda_structure.yaml  config.py  config.yaml  data_cache.py  determinism.py  element_parser.py  fhir_definition.py  light.yaml  safety.yml  schema.py
tests/: test_base_tag.py  test_snapshot.py
tests/integration/: test_anonymizer_deterministic.py
tests/tags/: conftest.py  test_tags.py  test_time.py
tests/test_data/: README.md
tests/unit/: test_anonymize_eicr.py  test_anonymizer.py  test_anonymizr_eicr.py  test_config.py  test_deterministic.py
tools/: cda_structure_generator.py
(+45 files in other folders)
