[project]
name = "eicr-anonymization"
version = "0.1.0"
description = "Script to anonymize eICR files"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "lxml>=5.3.1",
  "pydantic>=2.11.3",
  "pyyaml>=6.0.2",
  "tabulate>=0.9.0",
  "tqdm>=4.67.1",
  "types-lxml>=2025.3.30",
  "usaddress>=0.5.13",
  "xmltodict>=0.14.2",
]

[project.scripts]
anonymize_eicr = "eicr_anonymization.__main__:main"

[dependency-groups]
dev = ["pytest>=8.3.5", "pytest-repeat>=0.9.3"]

[tool.uv]
package = true

[tool.ruff]
fix = true
line-length = 100
exclude = ["__init__.py"]

[tool.ruff.lint]
select = [
  "B",    # Bugbear
  "C4",   # flake8-comprehensions
  "C90",  # mccabe
  "D",    # Pydocstyle
  "E",    # Pydocstyle errors
  "F",    # Pyflakes
  "FURB", # refurb
  "G",    # flake8-logging-format
  "I",    # isort
  "LOG",  # flake8-logging
  "PL",   # Pylint
  "PT",   # flake8-pytest-style
  "RUF",  # Ruff
  "S",    # Bandit
  "SIM",  # flake8-simplify
  # "TRY",  # tryceratops
  "UP", # pyupgrade
  "W",  # Pydocstyle warnings
]
ignore = [
  "D100", # Missing docstring in public module
  "S311", # suspicious-non-cryptographic-random-usage
  "S320", # suspicious-xmle-tree-usage - deprecated
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
  "S101", # assert
]
"conftest.py" = [
  "D100", # Missing docstring in public module
]
